2003-06-27  Alasdair Allan <aa@astro.ex.ac.uk>

         * Build.pm: Fixed the request_observation() routine to handle SNR
           and Flux correctly.
           
         * Build.pm: Fixed so that it actually takes acount of the host
           parameter passed when the object is created. It was ignoring it
           and setting the IA host to $host = hostname() . "." . hostdomain();
           
2003-06-10  Alasdair Allan <aa@astro.ex.ac.uk>

         * Parse.pm: Fixed ra() and dec() which were incorrectly looking
           for a 'tag_value' keyword inside the Coordinates subtag. Added
           flux() method.
           
2003-06-03  Alasdair Allan <aa@astro.ex.ac.uk>

        * Build.pm: Added support for Signal-to-noise requests in addition
          to straight exposure time requests. Removed freeze() function.

        * Parse.pm: Added support for Signal-to-noise.
            
        * RTML.pm: Added support for RTML documents from scalars as well as
          from a file.
                    
2002-03-29  Alasdair Allan <aa@astro.ex.ac.uk>

        * Added freeze() functions for persistent store
        
2002-03-28  Alasdair Allan <aa@astro.ex.ac.uk>

        * Parse.pm: Added a whole bunch of query methods needed by
          the IA to rebuild follow on requests.
          
2002-03-22  Alasdair Allan <aa@astro.ex.ac.uk>

        * Working version, ready to ship as an alpha.
        
2002-03-18  Alasdair Allan <aa@astro.ex.ac.uk>

        * Working system which will move the telescope, when combined
          with eSTAR::IO modules. Added observation.pl and server.pl
          scripts to module (should make separate?).
          
        * Build.pm: Minmal set of tags should be in palce.
          
2002-03-17  Alasdair Allan <aa@astro.ex.ac.uk>

        * Build.pm: Basic RTML construction for "score" and "request"
          documents in place.
          
        * Parse.pm: Added score() and time() methods needed to build